--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 635e442
+	previous = 635e442
+	base = 40b9b1b
 	trim = 
 	trimbase = 
