--- a/rmf_utils/package.xml
+++ b/rmf_utils/package.xml
@@ -5,6 +5,7 @@
   <version>1.3.0</version>
   <description>Simple C++ programming utilities used by Robotics Middleware Framework packages</description>
   <maintainer email="grey@openrobotics.org">Grey</maintainer>
+  <maintainer email="marco@openrobotics.org">Marco A. Gutiérrez</maintainer>
   <license>Apache License 2.0</license>
   <author>Grey</author>
 
