--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6201476
-	base = 430802d
-	trim = 
-	trimbase = 
+	base = 9e79bf2
+	trim = rmf_utils
+	trimbase = 430802d
