--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/galactic/rmf_utils
-	previous = 
-	base = 9e79bf2
+	previous = 9e79bf2
+	base = 13b506d
 	trim = 
 	trimbase = 
