--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/galactic/rmf_utils
-	previous = 
-	base = 47b108f
+	previous = 47b108f
+	base = 69ef737
 	trim = 
 	trimbase = 
