--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/galactic/rmf_utils
-	previous = 
-	base = 2950a78
+	previous = 2950a78
+	base = 960f1f6
 	trim = 
 	trimbase = 
