--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 6201476
-	base = b011fb5
-	trim = 
-	trimbase = 
+	base = d3798d8
+	trim = rmf_utils
+	trimbase = b011fb5
