--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/foxy/rmf_utils
-	previous = 
-	base = d3798d8
+	previous = d3798d8
+	base = 6bc7be8
 	trim = 
 	trimbase = 
