--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/foxy/rmf_utils
-	previous = 
-	base = 4568515
+	previous = 4568515
+	base = b4beece
 	trim = 
 	trimbase = 
