--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ca2fbba
-	base = 2851b8a
-	trim = 
-	trimbase = 
+	base = 7039d3b
+	trim = rmf_utils
+	trimbase = 2851b8a
