--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 4809369
+	previous = 4809369
+	base = 8c88e5a
 	trim = 
 	trimbase = 
