--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 680c2da
+	previous = 680c2da
+	base = 90605af
 	trim = 
 	trimbase = 
