--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_utils
-	previous = 
-	base = 7039d3b
+	previous = 7039d3b
+	base = 75339d8
 	trim = 
 	trimbase = 
