--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_utils
-	previous = 
-	base = ab30cbd
+	previous = ab30cbd
+	base = 547cb22
 	trim = 
 	trimbase = 
