--- a/tracks.yaml
+++ b/tracks.yaml
@@ -76,5 +76,4 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/open-rmf/rmf_utils.git
-    version: 1.3.0
-    version_saved: :{auto}
+    version: :{auto}
