--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 826950b
-	base = e0874e0
+	base = d3380d1
 	trim = rmf_utils
-	trimbase = 
+	trimbase = e0874e0
