--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-3": ["Tue Feb 08 2022", "Grey", "grey@openrobotics.org"]}
+{"1.4.0-1": ["Wed Apr 06 2022", "Grey", "grey@openrobotics.org"], "1.3.0-3": ["Tue Feb 08 2022", "Grey", "grey@openrobotics.org"]}
