--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 2a6d235
-	base = a8bebb1
+	base = 70cd211
 	trim = rmf_utils
-	trimbase = 
+	trimbase = a8bebb1
