--- a/tracks.yaml
+++ b/tracks.yaml
@@ -102,4 +102,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/open-rmf/rmf_utils.git
-    version: :{auto}
+    version: 1.4.0
+    version_saved: :{auto}
