--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c27cc25
-	base = 67aa976
-	trim = 
-	trimbase = 
+	base = e8ec3a3
+	trim = rmf_utils
+	trimbase = 67aa976
