--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_utils
-	previous = 
-	base = e8ec3a3
+	previous = e8ec3a3
+	base = a848886
 	trim = 
 	trimbase = 
