--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 32e57a5
+	previous = 32e57a5
+	base = 5f0084f
 	trim = 
 	trimbase = 
