--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 750a771
+	previous = 750a771
+	base = 6615219
 	trim = 
 	trimbase = 
