--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_utils
-	previous = 
-	base = e3a5d1f
+	previous = e3a5d1f
+	base = b8fcf88
 	trim = 
 	trimbase = 
