--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 988ecfc
-	base = e9060b6
+	base = ec9bc3c
 	trim = rmf_utils
-	trimbase = 
+	trimbase = e9060b6
