--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,43 +1,20 @@
 name: build
 on:
-  push:
   pull_request:
+  push:
+    branches:
+      - main
   schedule:
     - cron: '35 0 * * *'
+  workflow_dispatch:
 
 jobs:
   build_and_test:
-    name: Build and test
-    runs-on: ubuntu-latest
-    container:
-      image: ubuntu:latest
-    steps:
-      - name: pwd
-        run: pwd
-      - name: deps
-        uses: ros-tooling/setup-ros@v0.2
-        with:
-          required-ros-distributions: rolling 
-      - name: build
-        uses: ros-tooling/action-ros-ci@v0.2
-        with:
-          target-ros2-distro: rolling
-          # build all packages listed in the meta package
-          package-name: |
-            rmf_utils
-          vcs-repo-file-url: |
-            https://raw.githubusercontent.com/open-rmf/rmf/main/rmf.repos
-          colcon-defaults: |
-            {
-              "build": {
-                "mixin": ["coverage-gcc"]
-              }
-            }
-          colcon-mixin-repository: https://raw.githubusercontent.com/colcon/colcon-mixin-repository/master/index.yaml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          files: ros_ws/lcov/total_coverage.info
-          flags: tests
-          name: lean_and_mean_codecov_bot
-
+    name: rmf_utils
+    uses: open-rmf/rmf_ci_templates/.github/workflows/reusable_build.yaml@main
+    with:
+      # Avoid execution on [foxy|galactic] focal (
+      dist-matrix: '[{"ros_distribution": "humble", "ubuntu_distribution": "jammy"}, {"ros_distribution": "rolling", "ubuntu_distribution": "jammy"}]'
+      # NOTE: Avoid adding comments in the packages lines, this can break some of the called scripts in github actions
+      packages: |
+        rmf_utils
