--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fbe0869
-	base = 15a278b
+	base = 14873c4
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 15a278b
