--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 83769b5
-	base = 5ed28ac
+	base = 3733b3f
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 5ed28ac
