--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f2be9dc
-	base = a7a2b7d
+	base = d62a950
 	trim = rmf_utils
-	trimbase = 
+	trimbase = a7a2b7d
