--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.5.0-1": ["Wed Jun 07 2023", "Grey", "grey@openrobotics.org"], "1.4.0-3": ["Thu Apr 20 2023", "Grey", "grey@openrobotics.org"], "1.4.0-2": ["Tue Mar 21 2023", "Grey", "grey@openrobotics.org"]}
+{"1.5.1-1": ["Wed Dec 20 2023", "Grey", "grey@openrobotics.org"], "1.5.0-1": ["Wed Jun 07 2023", "Grey", "grey@openrobotics.org"], "1.4.0-3": ["Thu Apr 20 2023", "Grey", "grey@openrobotics.org"], "1.4.0-2": ["Tue Mar 21 2023", "Grey", "grey@openrobotics.org"]}
