--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = e05b36f
-	base = 8ad89d3
-	trim = 
-	trimbase = 
+	base = 88edee5
+	trim = rmf_utils
+	trimbase = 8ad89d3
