--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_utils
-	previous = 
-	base = 88edee5
+	previous = 88edee5
+	base = 586fb0e
 	trim = 
 	trimbase = 
