--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 51fc4d9
+	previous = 51fc4d9
+	base = 1e33184
 	trim = 
 	trimbase = 
