--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/rmf_utils
-	previous = 
-	base = 1966fa7
+	previous = 1966fa7
+	base = 9722793
 	trim = 
 	trimbase = 
