--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/rmf_utils
-	previous = 
-	base = 88edee5
+	previous = 88edee5
+	base = b4d0d97
 	trim = 
 	trimbase = 
