--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/rmf_utils
-	previous = 
-	base = 5069d49
+	previous = 5069d49
+	base = fb26ae4
 	trim = 
 	trimbase = 
