--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = fdac98f
-	base = 18215b2
+	base = c47d7f7
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 18215b2
