--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ba03857
-	base = 2615f6f
+	base = 5cb6ae6
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 2615f6f
