--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.6.0-2": ["Wed Mar 06 2024", "Grey", "grey@openrobotics.org"]}
+{"1.6.1-1": ["Mon Jun 03 2024", "Grey", "grey@openrobotics.org"], "1.6.0-2": ["Wed Mar 06 2024", "Grey", "grey@openrobotics.org"]}
