--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f596c01
-	base = 68d85a1
+	base = b2d4278
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 68d85a1
