--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = f5a6221
-	base = 990e486
+	base = 45dfebf
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 990e486
