--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.6.0-3": ["Fri Apr 19 2024", "Grey", "grey@openrobotics.org"], "1.6.0-2": ["Wed Mar 06 2024", "Grey", "grey@openrobotics.org"]}
+{"1.6.2-1": ["Sat Jun 15 2024", "Grey", "grey@openrobotics.org"], "1.6.0-3": ["Fri Apr 19 2024", "Grey", "grey@openrobotics.org"], "1.6.0-2": ["Wed Mar 06 2024", "Grey", "grey@openrobotics.org"]}
