--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 54ba74947180
-	base = 6d912fd8629f
+	base = 0a8276621aa3
 	trim = rmf_utils
-	trimbase = 
+	trimbase = 6d912fd8629f
